Update live2d link to point to new URL

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <script>
         document.getElementById('live2d').addEventListener('click', function () {
-            window.location.href = 'blue-archive-spine/';
+            window.location.href = 'https://ba.svdex.moe';
         });
     </script>
 </body>
